welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (k<-0 to n-1){
^indexOfValue:11: error: ';' expected but 'return' found.
}return pos 
 ^